[package]
name = "rust_tac_toe"
version = "0.1.0"
authors = ["Sean Hellum <seanhellum45@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dialoguer = "0.5.0"
console = "0.9.1"
colored = "1.9"
rand = "0.6.5"